--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.postgresql:postgresql:42.7.3' // JDBC
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.4' // JPA
+	implementation 'org.projectlombok:lombok:1.18.32' // Lombok 의존성 버전 명시
+	annotationProcessor 'org.projectlombok:lombok:1.18.32' // Lombok 어노테이션 프로세서 버전 명시
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
