--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=dlsrks12
 spring.datasource.platform=postgres
+
+#Hibernate? JsonNode? ???? ????? ??
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
